@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-11T08:12:29Z",
+  "timestamp" : "2023-10-12T16:12:25Z",
   "count_outdated" : 1779,
   "uniques_outdated" : 611,
-  "count" : 1838,
-  "uniques" : 628,
+  "count" : 1840,
+  "uniques" : 629,
   "views" : [
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
