@@ -1,6 +1,6 @@
 {
-  "count": 59,
-  "uniques": 17,
+  "count": 61,
+  "uniques": 18,
   "views": [
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
