@@ -1,3 +1,12 @@
+2023-10-12T16:12:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6498199313 # 1980
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
+* notice: last 14d: unq all: 18 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 611 1779 / 628 1838
+* notice: next accum: outdated-unq outdated-all / unq all: 611 1779 / 629 1840
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-10-12]
+
 2023-10-11T08:12:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6479774376 # 1976
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
